--- a/catalog.html
+++ b/catalog.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>HTML Academy: Техномарт</title>
   <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i&amp;subset=cyrillic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -118,8 +119,8 @@
                 <img src="./img/bosch3000.jpg" width="218" height="170" alt="Перфоратор Bosch BFG 3000">
               </a>
               <p class="catolog-item-button">
-                <a class="button-green" href="#">Купить</a>
-                <a class="button-green" href="#">В закладки</a>
+                <a class="button-green-buy" href="#"><span class="catolog-item-basket"></span>Купить</a>
+                <a class="button-green-bookmark" href="#">В закладки</a>
               </p>
               <h3><a class="card-name" href="#">Перфоратор Bosch<span class="item-model">BFG 3000</span></a></h3>
               <p class="price">22500 р.</p>
@@ -130,8 +131,8 @@
                 <img src="./img/bosch6000.jpg" width="218" height="170" alt="Перфоратор Bosch BFG 6000">
               </a>
               <p class="catolog-item-button">
-                <a class="button-green" href="#">Купить</a>
-                <a class="button-green" href="#">В закладки</a>
+                <a class="button-green-buy" href="#"><span class="catolog-item-basket"></span>Купить</a>
+                <a class="button-green-bookmark" href="#">В закладки</a>
               </p>
               <h3><a class="card-name" href="#">Перфоратор Bosch<span class="item-model">BFG 6000</span></a></h3>
               <p class="price">30500 р.</p>
@@ -143,8 +144,8 @@
               </a>
               <div class="strip">новинка</div>
               <p class="catolog-item-button">
-                <a class="button-green" href="#"><span class="catolog-item-basket"></span>Купить</a>
-                <a class="button-green" href="#">В закладки</a>
+                <a class="button-green-buy" href="#"><span class="catolog-item-basket"></span>Купить</a>
+                <a class="button-green-bookmark" href="#">В закладки</a>
               </p>
               <div class="without-price">
                 <h3><a class="card-name" href="#">Перфоратор Bosch<span class="item-model">BFG 2000</span></a></h3>
@@ -156,8 +157,8 @@
                 <img src="./img/bosch3000.jpg" width="218" height="170" alt="Перфоратор Bosch BFG 3000">
               </a>
               <p class="catolog-item-button">
-                <a class="button-green" href="#">Купить</a>
-                <a class="button-green" href="#">В закладки</a>
+                <a class="button-green-buy" href="#"><span class="catolog-item-basket"></span>Купить</a>
+                <a class="button-green-bookmark" href="#">В закладки</a>
               </p>
               <h3><a class="card-name" href="#">Перфоратор Bosch<span class="item-model">BFG 3000</span></a></h3>
               <p class="price">22500 р.</p>
@@ -169,45 +170,7 @@
               </a>
               <div class="strip">новинка</div>
               <p class="catolog-item-button">
-                <a class="button-green" href="#">Купить</a>
-                <a class="button-green" href="#">В закладки</a>
-              </p>
-              <h3><a class="card-name" href="#">Перфоратор Bosch<span class="item-model">BFG 6000</span></a></h3>
-              <p class="price">30500 р.</p>
-              <p class="discount-price">25500 р.</p>
-            </li>
-            <li class="catolog-item">
-              <a href="#">
-                <img src="./img/bosch2000.jpg" width="218" height="170" alt="Перфоратор Bosch BFG 2000">
-              </a>
-              <p class="catolog-item-button">
-                <a class="button-green" href="#">Купить</a>
-                <a class="button-green" href="#">В закладки</a>
-              </p>
-              <div class="without-price">
-                <h3><a class="card-name" href="#">Перфоратор Bosch<span class="item-model">BFG 2000</span></a></h3>
-                <p class="discount-price">12500 р.</p>
-              </div>
-            </li>
-            <li class="catolog-item">
-              <a href="#">
-                <img src="./img/bosch3000.jpg" width="218" height="170" alt="Перфоратор Bosch BFG 3000">
-              </a>
-              <div class="strip">новинка</div>
-              <p class="catolog-item-button">
-                <a class="button-green" href="#">Купить</a>
-                <a class="button-green" href="#">В закладки</a>
-              </p>
-              <h3><a class="card-name" href="#">Перфоратор Bosch<span class="item-model">BFG 3000</span></a></h3>
-              <p class="price">22500 р.</p>
-              <p class="discount-price">15500 р.</p>
-            </li>
-            <li class="catolog-item">
-              <a href="#">
-                <img src="./img/bosch6000.jpg" width="218" height="170" alt="Перфоратор Bosch BFG 6000">
-              </a>
-              <p class="catolog-item-button">
-                <a class="button-green-buy" href="#">Купить</a>
+                <a class="button-green-buy" href="#"><span class="catolog-item-basket"></span>Купить</a>
                 <a class="button-green-bookmark" href="#">В закладки</a>
               </p>
               <h3><a class="card-name" href="#">Перфоратор Bosch<span class="item-model">BFG 6000</span></a></h3>
@@ -219,8 +182,46 @@
                 <img src="./img/bosch2000.jpg" width="218" height="170" alt="Перфоратор Bosch BFG 2000">
               </a>
               <p class="catolog-item-button">
-                <a class="button-green" href="#">Купить</a>
-                <a class="button-green" href="#">В закладки</a>
+                <a class="button-green-buy" href="#"><span class="catolog-item-basket"></span>Купить</a>
+                <a class="button-green-bookmark" href="#">В закладки</a>
+              </p>
+              <div class="without-price">
+                <h3><a class="card-name" href="#">Перфоратор Bosch<span class="item-model">BFG 2000</span></a></h3>
+                <p class="discount-price">12500 р.</p>
+              </div>
+            </li>
+            <li class="catolog-item">
+              <a href="#">
+                <img src="./img/bosch3000.jpg" width="218" height="170" alt="Перфоратор Bosch BFG 3000">
+              </a>
+              <div class="strip">новинка</div>
+              <p class="catolog-item-button">
+                <a class="button-green-buy" href="#"><span class="catolog-item-basket"></span>Купить</a>
+                <a class="button-green-bookmark" href="#">В закладки</a>
+              </p>
+              <h3><a class="card-name" href="#">Перфоратор Bosch<span class="item-model">BFG 3000</span></a></h3>
+              <p class="price">22500 р.</p>
+              <p class="discount-price">15500 р.</p>
+            </li>
+            <li class="catolog-item">
+              <a href="#">
+                <img src="./img/bosch6000.jpg" width="218" height="170" alt="Перфоратор Bosch BFG 6000">
+              </a>
+              <p class="catolog-item-button">
+                <a class="button-green-buy" href="#"><span class="catolog-item-basket"></span>Купить</a>
+                <a class="button-green-bookmark" href="#">В закладки</a>
+              </p>
+              <h3><a class="card-name" href="#">Перфоратор Bosch<span class="item-model">BFG 6000</span></a></h3>
+              <p class="price">30500 р.</p>
+              <p class="discount-price">25500 р.</p>
+            </li>
+            <li class="catolog-item">
+              <a href="#">
+                <img src="./img/bosch2000.jpg" width="218" height="170" alt="Перфоратор Bosch BFG 2000">
+              </a>
+              <p class="catolog-item-button">
+                <a class="button-green-buy" href="#"><span class="catolog-item-basket"></span>Купить</a>
+                <a class="button-green-bookmark" href="#">В закладки</a>
               </p>
               <div class="without-price">
                 <h3><a class="card-name" href="#">Перфоратор Bosch<span class="item-model">BFG 2000</span></a></h3>
