--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>HTML Academy: Техномарт</title>
   <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i&amp;subset=cyrillic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -100,7 +101,7 @@
           <ul class="footer-categories">
             <li><a href="#">Материалы</a></li>
             <li><a href="#">Техника</a></li>
-            <li><a href="#">Инструменты</a></li>
+            <li><a href="#">Инструмент</a></li>
             <li><a href="#">Спецпредложения</a></li>
           </ul>
         </div>
@@ -120,7 +121,7 @@
         <div class="footer-bottom-feedback">
           <p>Обратная связь: <br>
             <a class="footer-yellow-name" href="#">mail@htmlacademy.ru</a></p>
-          <p>Разработано - <br>
+          <p>Разработано &#8212; <br>
             <a class="footer-yellow-name" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
         </div>
       </div>
